GNOME Bugzilla – Bug 702730
upnp: Disappearing sources are not unregistered
Last modified: 2013-06-21 07:52:25 UTC
It seems that while fixing a race condition in 39437df a call to grl_registry_unregister_source() went missing and when UPnP sources go away they are not removed.
Created attachment 247309 [details] [review] upnp: Really unregister disappearing sources Unregister the corresponding GrlSource when a UPnP server is being turned off. It seems that the _unregister() call got lost in 39437df.
commit 1dd612f7040c1c7728b4cc6ce1f12b38ae17214c Author: Emanuele Aina <emanuele.aina@collabora.com> Date: Thu Jun 20 12:18:53 2013 +0200 upnp: Really unregister disappearing sources Unregister the corresponding GrlSource when a UPnP server is being turned off. It seems that the _unregister() call got lost in 39437df. https://bugzilla.gnome.org/show_bug.cgi?id=702730 src/upnp/grl-upnp.c | 7 +++++++ 1 file changed, 7 insertions(+) Attachment 247309 [details] pushed as 1dd612f - upnp: Really unregister disappearing sources