upnp: Really unregister disappearing sources

Unregister the corresponding GrlSource when a UPnP server is being
turned off. It seems that the _unregister() call got lost in 39437df.

https://bugzilla.gnome.org/show_bug.cgi?id=702730